# Media-Processor

./: .env.backup  .env.example  .gitignore  .mcp.enhanced.json  .mcp.json  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  INSTALLATION.md  MEDIA-NAMING-GUIDE.md  MODULARIZATION.md  QUICK-START.md  README.md  REFACTORING.md  TODO_FRONTEND.md  build-frontend.sh  claude-mcp-toolkit-plan.md  fix-dashboard-display.js  fix-dashboard-stats.js  fix-services.sh  fix-smb-diagnostics.sh  fix-systemd-services.sh  install-dependencies.sh  integrate-mcp-toolkit.sh  media-processor-api.service  media-processor-py.service  media-processor-sudoers  media-processor-ui.service  media-processor-web.service  media-processor.service  media-processor.sh  media-processor.sh.backup  package-lock.json  package.json  refactoring-plan.md  refresh_stats.js  requirements-system.txt  restart-services.sh  scan_tracks.sh  service-control.sh  (+14 more)
data/: media_processor.db  (+1 more)
python_core/: README.md  TMDB_SETUP.md  api_server.py  database_manager.py  fix_dashboard_stats.py  initialize_database.py  install_dependencies.sh  manual_scan.py  media_processor.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_api_server.sh  simple_sync.py
python_core/modules/: __init__.py
python_core/modules/api/: dashboard_client.py  tmdb_client.py
python_core/modules/config/: settings.py
python_core/modules/database/: media_database.py
python_core/modules/media/: __init__.py  detector.py  season_unifier.py
python_core/modules/utils/: file_history.py  logging_setup.py
python_core/tests/: test_monitoring.py
(+113 files in other folders)
