[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-processor"
version = "0.1.0"
description = "Media processor for organizing and transferring media files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "flask",
    "flask-cors",
    "psutil",
    "pymediainfo",
    "pysmb",
    "requests",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pyright]
venvPath = "."
venv = ".venv" 